Terraform/modules/vpc/route_table.tf
# Public Route Table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name       = "${var.prefix}-public-rt-${var.postfix}"
    Managed_by = "terraform"
  }
}

resource "aws_route" "internet_to_igw" {
  route_table_id         = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "public_subnet_associate_rt" {
  count = length(var.public_subnets)

  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}


# Private Route Table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name       = "${var.prefix}-private-rt-${var.postfix}"
    Managed_by = "terraform"
  }
}

resource "aws_route" "internet_to_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.nat.id
  # gateway_id             = aws_internet_gateway.igw.id
}

resource "aws_route_table_association" "private_subnet_associate_to_rt" {
  count = length(var.private_subnets)

  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}
